# CLAS12-starter

./: .gitignore  README.md  meson.build
config/: study1.toml
hipo4/: hipoeventiterator.cpp  hipoeventiterator.h  meson.build
include/Core/: Constantes.hpp  Helpers.hpp  Particle.hpp  ReadBank.hpp  Runs.hpp
include/Plotting/: Draw.hpp
include/study1/: Reader.hpp
include/thread_pool/: multi_thread.hpp
plots/electron/C/: chi2_e.C  p_e.C  phi_e.C  theta_e.C  vz_e.C
plots/electron/root/: chi2_e.root  p_e.root  phi_e.root  theta_e.root  vz_e.root
plots/electron/tex/: chi2_e.tex  p_e.tex  phi_e.tex  theta_e.tex  vz_e.tex
src/: main.cpp
src/study1/: Drawing.cpp  Reader.cpp
